Fixing small UI issues (#2961)
Adding styles to prevent menu item title text to expand if title is too long.
Fixed GraphiQL and Media UI after changing the collapsed admin menu size.
Aligning more properly the collapsible chevron icon vertically.

--- a/src/OrchardCore.Modules/OrchardCore.Apis.GraphQL/Assets/scss/graphiql-orchard.scss
+++ b/src/OrchardCore.Modules/OrchardCore.Apis.GraphQL/Assets/scss/graphiql-orchard.scss
@@ -1,6 +1,6 @@
 #graphiql {
     position: absolute;
-    top: 59px;
+    top: 49px;
     bottom: 0;
     right: 0;
     left: 260px;
@@ -13,7 +13,7 @@
 
 
 .left-sidebar-compact #graphiql {
-    left: 60px;
+    left: 48px;
     transition: left 0.2s ease-in-out, width 0.2s ease-in-out;
 }
 
