--- a/src/OrchardCore.Modules/OrchardCore.Media/Assets/scss/_main-layout.scss
+++ b/src/OrchardCore.Modules/OrchardCore.Media/Assets/scss/_main-layout.scss
@@ -52,10 +52,5 @@
 }
 
 .left-sidebar-compact #mediaApp {
-    position: absolute;
-    top: 128px;
-    bottom: 0;
-    right: 0;
-    left: 60px;
-    transition: left 0.2s ease-in-out, width 0.2s ease-in-out;
+    left: 48px;
 }
